--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -20,11 +20,11 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        style="android.R.color.holo_red_dark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
         android:background="@android:color/transparent"
+        android:theme="@style/ProgressBarTheme"
         android:visibility="gone" />
 
     <GridLayout
@@ -48,7 +48,7 @@
             android:background="@null"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#2a5885"
+            android:textColor="@color/colorWhite"
             android:layout_gravity="center_horizontal"
             android:text="@string/refresh_results" />
     </GridLayout>
