--- a/app/src/main/res/layout/image_fullscreen_preview.xml
+++ b/app/src/main/res/layout/image_fullscreen_preview.xml
@@ -12,6 +12,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_centerInParent="true"
+        android:indeterminateTint="@color/colorPrimaryDark"
         android:visibility="visible" />
 
     <ImageView
