--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,4 +31,15 @@
         <item name="android:windowIsFloating">false</item>
     </style>
 
+    <style name="AdvertCheckBox" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">#b6b6b6</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
+    </style>
+
+
+    <style name="ProgressBarTheme" parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">@color/colorPrimary</item>
+    </style>
+
+
 </resources>
