--- a/app/src/main/res/menu/dialog_menu.xml
+++ b/app/src/main/res/menu/dialog_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_back_home"
-        android:title="@string/home"
-        android:icon="@mipmap/baseline_home_white_36"
+    <item android:id="@+id/action_remove_bookmarks"
+        android:icon="@drawable/baseline_delete_white_36"
+        android:title="@string/remove_bookmarks"
         android:orderInCategory="1"
         app:showAsAction="ifRoom" />
 </menu>
